# MCPLocalLLM

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ARCHIVE_INDEX.md  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  ROTATION_STATS.md  config.example.yaml  docker-compose.yml  launcher.py  memory_server.py  mypy.ini  pyproject.toml  requirements-m1-max.txt  ruff.toml
.cursor/rules/: mcplocalllm.mdc  python.mdc
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
.oodatcaa/: AGENT_INTERACTION_GUIDE.md  AGENT_MANAGEMENT.md  AGENT_ROLES_MATRIX.md  ARCHITECTURE.md  AUTONOMOUS_WORKFLOW.md  FINAL_LAUNCH_COMMAND.md  LAUNCH_NEGOTIATOR.md  LOOP_POLICY.md  ONBOARDING.md  OODATCAA_LOOP_GUIDE.md  PARALLEL_AGENTS_GUIDE.md  QUALITY_STANDARDS.md  QUICK_START.md  README.md  RUNBOOK.md  START_HERE.md  TROUBLESHOOTING.md  WORKFLOW_ANALYSIS.md
.oodatcaa/config/: ProjectRules.md  UserRules.md
.oodatcaa/objectives/: OBJECTIVE.md  RELEASE_CHECKLIST.md  SPRINT_2_OBJECTIVE.md  SPRINT_GOAL.md
.oodatcaa/prompts/: README.md  builder.md  doctrine.md  integrator.md  negotiator.md  planner.md  project-completion-detector.md  refiner.md  release.md  snippets-lease.md  snippets-locks.md  sprint-close.md  sprint-planner.md  tester.md  triage.md
.oodatcaa/scripts/: lease.sh  lock.sh  validate-docs.sh
.oodatcaa/templates/: AGENT_REPORT_TEMPLATE.md
.oodatcaa/work/: AGENT_GAP_ANALYSIS.md  AGENT_LOG.md  AGENT_LOG_temp.md  AGENT_PLAN.md  AGENT_REPORTS.md  SPRINT_BACKLOG.md  SPRINT_DISCUSS.md  SPRINT_LOG.md  SPRINT_PLAN.md  SPRINT_QUEUE.json  SPRINT_QUEUE.json.backup  SPRINT_QUEUE.json.backup-p006  SPRINT_STATUS.json  TEST_PLAN.md  W006-B02_COMPLETION_SUMMARY.md  cicd_readiness.md  coverage_analysis.md  integration_cross_system.md  integration_p001_daemon.md  integration_p002_rotation.md  integration_p003_sprint_mgmt.md  performance_validation.md  quality_baseline_sprint1.md  quality_gates_sprint2.md  regression_analysis.md  sprint2_quality_certification.md  tool_verification_report.md
.oodatcaa/work/analysis/W001/: W001_ANALYSIS_SUMMARY.md  conflict_resolution.md  dependencies.md  essential_components.md  mcp_structure_inventory.md  (+2 more)
.oodatcaa/work/archive/: README.md
.oodatcaa/work/reports/: README.md
docs/: BACKGROUND_AGENTS.md  BRANCH_PROTECTION.md  CONTRIBUTING.md  SECURITY.md  SPRINT_MANAGEMENT.md
docs/mcp/: API.md  DEPLOYMENT.md  DUAL_LINK_FEASIBILITY_REPORT.md  GUIDANCE_CONTENT.md  PROMPT_EXAMPLES.md  REFERENCE_BASED_FEASIBILITY_REPORT.md  TROUBLESHOOTING.md  mcp-qdrant-dual-link-architecture.drawio  mcp-qdrant-reference-architecture.drawio  mcp-qdrant-reference-architecture.md  mcp-qdrant4Web4Files.md  qdrant-ai-bootstrapping.drawio
docs/training/: T001_framework_evaluation.md  inference_test_results.md  memory_profile.md
policy/: 01-principles.md  02-forbidden-actions.md  03-required-sections.md  04-style-guide.md
scripts/: agent-daemon.py  agents-daemon-cli.sh  cleanup-unnecessary-packages.sh  deploy.sh  generate-archive-index.sh  install-log-rotation.sh  install-m1-max.sh  loop-metrics.sh  maintenance.sh  remove-cuda-packages.sh  rotate-logs.sh  setup-dev.sh  sprint-complete.sh  sprint-dashboard.sh  sprint-new.sh  validate-env.py  verify-no-cuda.py
scripts/training/: inference_test.py  load_model_test.py  memory_profile.py
src/mcp/: __init__.py  config.py  generic_memory_service.py  markdown_processor.py  mcp_protocol_handler.py  mcp_server.py  memory_manager.py  memory_manager_backup.py  policy_processor.py  prompt_handlers.py  prompt_handlers_original.py  qdrant_manager.py  server_config.py  system_health_monitor.py  tool_definitions_backup.py  tool_handlers.py  ui_config.py
src/mcp/handlers/: __init__.py  agent_management_handlers.py  core_memory_handlers.py  markdown_processing_handlers.py  policy_and_guidance_handlers.py  system_and_collections_handlers.py
src/mcp/memory/: __init__.py  agent_registry.py  collection_manager.py  embedding_service.py  file_metadata_manager.py  vector_operations.py
src/mcp/prompts/: __init__.py  core_agent_prompts.py  memory_management_prompts.py  policy_compliance_prompts.py
src/mcp/tools/: __init__.py  agent_management_tools.py  batch_tools.py  collection_tools.py  core_memory_tools.py  guidance_tools.py  markdown_tools.py  policy_tools.py  system_tools.py
src/mcp_local/: collection_manager.py  error_handler.py  markdown_processor.py  mcp_protocol_handler.py  mcp_server.py  memory_manager.py  resource_handlers.py  server_config.py  tool_definitions.py  ui_config.py
src/mcp_local/handlers/: __init__.py  markdown_processing_handlers.py
src/mcp_local/memory/: __init__.py
src/mcp_local/prompts/: core_agent_prompts.py  memory_management_prompts.py
src/mcp_local/tools/: __init__.py  collection_tools.py  core_memory_tools.py  markdown_tools.py
src/mdnotes/: __init__.py  core.py
systemd/: agent-builder.service  agent-integrator.service  agent-planner.service  agent-refiner.service  agent-tester.service  install-services.sh  uninstall-services.sh
tests/: test_agent_daemon.py  test_smoke.py
tests/acceptance/: test_placeholder.py
tests/mcp/: __init__.py  conftest.py  test_memory_operations.py  test_policy_system.py  test_server_initialization.py
(+92 files in other folders)
